--- a/index.html
+++ b/index.html
@@ -8,7 +8,27 @@
     <link rel="stylesheet" href="./assets/styles.css">
 </head>
 <body>
-<div class="container-fluid">
+<!-- Sección de Login -->
+<div class="container d-flex justify-content-center align-items-center vh-100" id="login-section">
+    <div class="card p-4" style="width: 400px;">
+        <h3 class="text-center mb-3">Iniciar Sesión</h3>
+        <form id="loginForm">
+            <div class="mb-3">
+                <label for="email" class="form-label">Correo</label>
+                <input type="email" id="email" class="form-control" placeholder="Ingrese su correo" required value="admin@admin.com">
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Contraseña</label>
+                <input type="password" id="password" class="form-control" placeholder="Ingrese su contraseña" required value="admin">
+            </div>
+            <div id="login-error" class="text-danger" style="display: none;">Credenciales incorrectas</div>
+            <button type="submit" class="btn btn-primary w-100">Ingresar</button>
+        </form>
+    </div>
+</div>
+
+<!-- Sección del Dashboard -->
+<div class="container-fluid d-none" id="dashboard-section">
     <div class="row">
         <!-- Barra lateral fija -->
         <nav class="col-md-2 d-none d-md-block bg-light sidebar">
@@ -23,6 +43,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#" id="nav-permissions">Permisos</a>
                     </li>
+                    <li class="nav-item mt-3">
+                        <button class="btn btn-danger w-100" id="logoutBtn">Cerrar Sesión</button>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -33,7 +56,6 @@
         </main>
     </div>
 </div>
-
 
 <script src="./renderer.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
