feat: versión 1.1 de rbac con electron y sqlite

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             <div class="position-sticky">
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" id="nav-users">Usuarios</a>
+                        <a class="nav-link" href="#" id="nav-users" data-permission="nav-users">Usuarios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="nav-roles">Roles</a>
+                        <a class="nav-link" href="#" id="nav-roles" data-permission="nav-roles">Roles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="nav-permissions">Permisos</a>
+                        <a class="nav-link" href="#" id="nav-permissions" data-permission="nav-permissions">Permisos</a>
                     </li>
                     <li class="nav-item mt-3">
                         <button class="btn btn-danger w-100" id="logoutBtn">Cerrar Sesión</button>
